--- a/api-sharedlist/composer.json
+++ b/api-sharedlist/composer.json
@@ -5,23 +5,26 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/lumen-framework": "5.2.*",
-        "vlucas/phpdotenv": "~2.2"
+        "laravel/lumen-framework": "5.0.*",
+        "vlucas/phpdotenv": "~1.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
         "phpunit/phpunit": "~4.0"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "classmap": [
+            "database/"
+        ]
     },
     "autoload-dev": {
         "classmap": [
-            "tests/",
-            "database/"
+            "tests/"
         ]
+    },
+    "config": {
+        "preferred-install": "dist"
     }
 }
